--- a/static/styleI.css
+++ b/static/styleI.css
@@ -95,7 +95,7 @@
   border: none;
   outline: 0 !important;
   padding: 5px;
-  background-color: #aa66cc;
+  background-color: #4285F4;
   color: white;
 }
 .branch option,
