--- a/templates/home.html
+++ b/templates/home.html
@@ -15,12 +15,12 @@
     <!-- <link rel="stylesheet" href="styleI.css"> -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleI.css') }}">
 
-    <title>Academics</title>
+    <title>Home</title>
 </head>
 <body>
     
     <div class="hiddenNav">
-      <a href="{{ url_for('home') }}"><p>Home</p></a>
+        <a href="{{ url_for('home') }}"><p>Home</p></a>
       <a href="{{ url_for('projects') }}"><p>Projects</p></a>
       <a href="{{ url_for('academics') }}"><p>Academics</p></a>
       <a href="{{ url_for('ideas') }}"><p>Ideas</p></a>
@@ -33,7 +33,7 @@
             </div>
 
             <div class="dropdown">
-
+                
                 <!--Trigger-->
                 <a class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false"><i class="fas fa-user-circle userIconNav"></i></a>
@@ -57,7 +57,6 @@
               </div>
             {% endif %}
 
-
             <div class="ham">
                 <div class="hero">
                     <i class="fas fa-bars fa-lg"></i>
@@ -71,8 +70,8 @@
 
         <div class="content">
             <div class="nav">
-                <div class="links" id="links">
-                    <a href="{{ url_for('home') }}"><h5>EBN</h5></a>
+                <div class="links">
+                    <a href="{{ url_for('projects') }}"><h5>EBN</h5></a>
                     <a href="{{ url_for('home') }}"><p>Home</p></a>
                     <a href="{{ url_for('projects') }}"><p>Projects</p></a>
                     <a href="{{ url_for('academics') }}"><p>Academics</p></a>
@@ -177,7 +176,7 @@
 
                             <div class="md-form">
 
-                                <form action="/addacademic" method="POST">
+                                <form action="/addproject" method="POST">
 
                                     <div class="md-form">
                                       {{ add_project_form.title(class = 'form-control', 
@@ -228,6 +227,10 @@
                 <!-- CARD  -->
 
                 {% for post in posts %}
+                
+                    {% for i in collab %}
+
+                        {% if i.follower_username == post.username and i.response == 'A' %}
   
                 <div class="card z-depth-2">
                     <div class="head">
@@ -331,7 +334,7 @@
                                   </button>
                               </div>
                               <div class="modal-body">
-                                  <form action="/editpostacademic" method="POST">
+                                  <form action="/editpostproject" method="POST">
           
                                     <div class="md-form">
                                         <input type="text" id="form1" name = "title" class="form-control" value="{{ post.title }}">
@@ -382,7 +385,7 @@
                               </div>
                               <div class="modal-footer">
                                   
-                                  <form action="/deleteacademic" method="POST">
+                                  <form action="/deleteproject" method="POST">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
                                     <div class="md-form">
                                       <input type="text" id="form1" style="display: none;" name = "projectid" class="form-control" value="{{ post.id }}">
@@ -445,7 +448,7 @@
 
                               <div class="comments-view">
 
-                                        <form action="/addacademiccomments" method="POST">
+                                        <form action="/addprojectcomments" method="POST">
                                                 <input type="text" id="comment" name="comment" class="form-control" >
 
                                                 <input style="display: none;" type="text" id="project" name="project" value="{{ post.id }}"> 
@@ -466,7 +469,8 @@
                     </div>
                     
                   </div>
-                  
+                  {% endif %}
+                  {% endfor %}
                   {% endfor %}
                   
             <!-- CARD  -->
@@ -511,15 +515,6 @@
         userIconNav.addEventListener("click", () => {
             userProfile.classList.toggle("userProfileDisplay");
         });
-        const header = document.getElementById("links");
-        const btns = header.getElementsByClassName("btnn");
-        for (var i = 0; i < btns.length; i++) {
-          btns[i].addEventListener("click", function() {
-          var current = document.getElementsByClassName("active");
-          current[0].className = current[0].className.replace(" active", "");
-          this.className += " active";
-          });
-        }
     </script>
 
 </body>
