--- a/templates/filtered.html
+++ b/templates/filtered.html
@@ -21,11 +21,10 @@
     
     
     <div class="hiddenNav">
+      <a href="{{ url_for('home') }}"><p>Home</p></a>
       <a href="{{ url_for('projects') }}"><p>Projects</p></a>
       <a href="{{ url_for('academics') }}"><p>Academics</p></a>
       <a href="{{ url_for('ideas') }}"><p>Ideas</p></a>
-      <a href="{{ url_for('blog') }}"><p>Blog</p></a>
-      <a href="{{ url_for('qna') }}"><p>QnA</p></a>
     </div>
     <nav>
         <div class="navbar">
@@ -59,7 +58,6 @@
               </div>
             {% endif %}
 
-
             <div class="ham">
                 <div class="hero">
                     <i class="fas fa-bars fa-lg"></i>
@@ -75,11 +73,10 @@
             <div class="nav">
                 <div class="links">
                     <a href="{{ url_for('projects') }}"><h5>EBN</h5></a>
-                    <a href="{{ url_for('projects') }}"><p>Projects</p></a>
-                    <a href="{{ url_for('academics') }}"><p>Academics</p></a>
-                    <a href="{{ url_for('ideas') }}"><p>Ideas</p></a>
-                    <a href="{{ url_for('blog') }}"><p>Blog</p></a>
-                    <a href="{{ url_for('qna') }}"><p>QnA</p></a>
+                    <a href="{{ url_for('home') }}"><p>Home</p></a>
+      <a href="{{ url_for('projects') }}"><p>Projects</p></a>
+      <a href="{{ url_for('academics') }}"><p>Academics</p></a>
+      <a href="{{ url_for('ideas') }}"><p>Ideas</p></a>
                   </div>
                 
                 <div class="dropdown">
@@ -274,7 +271,19 @@
                                 <span aria-hidden="true">&times;</span>
                               </button>
                             </div>
-                            <div class="modal-body">Contact details</div>
+                            <div class="modal-body">
+                              <p>Contact details</p>
+                              {% for i in users %}
+                            
+                              {% if i.username == post.username %}
+                              <div class="links" style="display: flex; justify-content: space-around;">
+                                  <a class="btn btn-primary" href="{{ i.linkedin }}"><i class="fab fa-linkedin-in"></i></a>
+                                  <a class="btn btn-primary" href="{{ i.github }}"><i class="fab fa-github"></i></a>
+                                  <a class="btn btn-primary" href="mailto:{{ i.email }}"><i class="fas fa-envelope"></i></a>
+                              </div>
+                              {% endif %}
+                              {% endfor %}
+                            </div>
                             <div class="modal-footer">
                               <button
                                 type="button"
